<resources>
    <string name="app_name">ipet_seller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="logo">아이펫</string>
    <string name="seller_center">판매자 센터</string>

    <string name="login_id">아이디</string>
    <string name="login_passwd">비밀번호</string>
    <string name="login">로그인</string>
    <string name="login_signup">회원가입</string>

    <string name="signup_description">아이펫 판매자 센터는 사업자 번호 및 상호명 확인 후 승인 시 이용이 가능합니다.(승인까지 최대 3일 소요)</string>
    <string name="signup_id">사용할 아이디 입력</string>
    <string name="signup_passwd">1차 비밀번호 입력</string>
    <string name="signup_passwd_confirm">2차 비밀번호 입력</string>
    <string name="signup_seller_name">상호명 입력</string>
    <string name="signup_seller_number">사업자 번호 입력(- 제외)</string>
    <string name="signup_seller_phone">핸드폰 번호 입력(- 제외)</string>
    <string name="signup">회원 가입하기</string>

    <string name="order_status">주문/배송 관리</string>
    <string name="order_preparing">배송준비중</string>
    <string name="order_delivering">배송중</string>
    <string name="order_delivered">배송완료</string>

    <string name="selling_product_list">판매 상품 리스트</string>
    <string name="register_product">판매 상품 등록</string>
    <string name="revenue_management">판매 매출 관리</string>

    <string name="logout">로그아웃</string>

    <string name="daily_order_count">일별 주문 수 현황</string>
    <string name="daily_order_amount">일별 주문 금액 현황</string>
</resources>