<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">


    <TextView
        android:id="@+id/textView_signup_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textAppearance="@style/Typography.yeongdo18"
        android:textColor="@color/brown_200"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_signup_seller_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/seller_center"
        android:textAppearance="@style/Typography.Bold20"
        android:textColor="@color/brown_200"
        app:layout_constraintBottom_toBottomOf="@id/textView_signup_logo"
        app:layout_constraintEnd_toEndOf="@id/textView_signup_logo"
        app:layout_constraintStart_toStartOf="@id/textView_signup_logo" />

    <ImageView
        android:id="@+id/imageView_signup_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_error_outline_24dp"
        app:layout_constraintStart_toStartOf="@id/guideLine_signup_start_boundary"
        app:layout_constraintTop_toBottomOf="@id/textView_signup_seller_center" />

    <TextView
        android:id="@+id/textView_signup_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/signup_description"
        android:textAppearance="@style/Typography.Regular14"
        app:layout_constraintEnd_toEndOf="@id/guideLine_signup_end_boundary"
        app:layout_constraintStart_toEndOf="@id/imageView_signup_error"
        app:layout_constraintTop_toTopOf="@id/imageView_signup_error" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_signup_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/signup_id"
        app:hintTextAppearance="@style/Typography.Regular14"
        app:layout_constraintEnd_toEndOf="@id/guideLine_signup_end_boundary"
        app:layout_constraintStart_toStartOf="@id/guideLine_signup_start_boundary"
        app:layout_constraintTop_toBottomOf="@id/textView_signup_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_signup_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusDown="@id/textInputLayout_signup_passwd"
            android:textAppearance="@style/Typography.Regular14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_signup_passwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/signup_passwd"
        android:textAppearance="@style/Typography.Regular14"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintEnd_toEndOf="@id/guideLine_signup_end_boundary"
        app:layout_constraintStart_toStartOf="@id/guideLine_signup_start_boundary"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_signup_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_signup_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAppearance="@style/Typography.Regular14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_signup_passwordConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/signup_passwd_confirm"
        android:textAppearance="@style/Typography.Regular14"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintEnd_toEndOf="@id/guideLine_signup_end_boundary"
        app:layout_constraintStart_toStartOf="@id/guideLine_signup_start_boundary"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_signup_passwd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_signup_passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAppearance="@style/Typography.Regular14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_signup_sellerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/signup_seller_name"
        android:textAppearance="@style/Typography.Regular14"
        app:layout_constraintEnd_toEndOf="@id/guideLine_signup_end_boundary"
        app:layout_constraintStart_toStartOf="@id/guideLine_signup_start_boundary"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_signup_passwordConfirm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_signup_sellerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textAppearance="@style/Typography.Regular14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_signup_sellerNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/signup_seller_number"
        android:textAppearance="@style/Typography.Regular14"
        app:layout_constraintEnd_toEndOf="@id/guideLine_signup_end_boundary"
        app:layout_constraintStart_toStartOf="@id/guideLine_signup_start_boundary"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_signup_sellerName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_signup_sellerNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:textAppearance="@style/Typography.Regular14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_signup_sellerPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/signup_seller_phone"
        android:textAppearance="@style/Typography.Regular14"
        app:layout_constraintEnd_toEndOf="@id/guideLine_signup_end_boundary"
        app:layout_constraintStart_toStartOf="@id/guideLine_signup_start_boundary"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_signup_sellerNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_signup_sellerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:textAppearance="@style/Typography.Regular14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_signup"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/signup"
        android:textAppearance="@style/Typography.Regular18"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideLine_signup_end_boundary"
        app:layout_constraintStart_toStartOf="@id/guideLine_signup_start_boundary" />

    <ProgressBar
        android:id="@+id/progressBar_signup_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_signup_top_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_signup_start_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_signup_end_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>